--- a/viralmedia/Base.lproj/Main.storyboard
+++ b/viralmedia/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--Menu View Controller-->
         <scene sceneID="qkJ-dd-JYM">
             <objects>
-                <viewController storyboardIdentifier="Menu" useStoryboardIdentifierAsRestorationIdentifier="YES" id="nZr-OU-ePh" customClass="MenuViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MenuTable" useStoryboardIdentifierAsRestorationIdentifier="YES" id="nZr-OU-ePh" customClass="MenuViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="a3S-yi-cPO"/>
                         <viewControllerLayoutGuide type="bottom" id="Ryg-BH-Pjt"/>
@@ -20,10 +20,23 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MenuCell" id="P8G-Vl-Gjm">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="P8G-Vl-Gjm" id="kMS-oF-azg">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="menutable" destination="5i0-II-W4F" id="AdS-9F-oDN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wzZ-Q1-ASI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -43,8 +56,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="topViewControllerStoryboardId" value="Main"/>
-                        <userDefinedRuntimeAttribute type="string" keyPath="underLeftViewControllerStoryboardId" value="Menu"/>
+                        <userDefinedRuntimeAttribute type="string" keyPath="topViewControllerStoryboardId" value="MainTable"/>
+                        <userDefinedRuntimeAttribute type="string" keyPath="underLeftViewControllerStoryboardId" value="MenuTable"/>
                     </userDefinedRuntimeAttributes>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -54,7 +67,7 @@
         <!--Navigation Controller-->
         <scene sceneID="vzR-Ja-AfH">
             <objects>
-                <navigationController storyboardIdentifier="Main" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="w00-jC-bpb" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MainTable" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="w00-jC-bpb" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="VhJ-6j-Sue">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -66,10 +79,10 @@
             </objects>
             <point key="canvasLocation" x="525" y="124"/>
         </scene>
-        <!--New View Controller-->
+        <!--New View Controller - Virary-->
         <scene sceneID="kpy-sN-uPL">
             <objects>
-                <viewController storyboardIdentifier="Content" useStoryboardIdentifierAsRestorationIdentifier="YES" id="uRJ-hg-pFY" customClass="NewViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ContentTable" useStoryboardIdentifierAsRestorationIdentifier="YES" id="uRJ-hg-pFY" customClass="NewViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="WgA-NP-Kep"/>
                         <viewControllerLayoutGuide type="bottom" id="4wJ-PD-Bmh"/>
@@ -79,20 +92,38 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="YYm-Ra-cik">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="533"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="contentStretch" x="0.0" y="1" width="1" height="1"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="SDe-Zh-1cy">
+                                        <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SDe-Zh-1cy" id="6IP-R6-XNJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="uRJ-hg-pFY" id="xXC-ZT-IhZ"/>
+                                    <outlet property="delegate" destination="uRJ-hg-pFY" id="FIj-uZ-AUb"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="ajg-Ou-SfV">
+                    <navigationItem key="navigationItem" title="Virary" id="ajg-Ou-SfV">
                         <barButtonItem key="leftBarButtonItem" title="Menu" id="Wyt-8r-abL">
                             <connections>
                                 <action selector="menuButtonTapped:" destination="uRJ-hg-pFY" id="Kgv-nh-rXY"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="NewContent" destination="YYm-Ra-cik" id="2kO-WV-XG4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="20d-Bt-ZvP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
