add fullscreen and progressbar

--- a/viralmedia/Base.lproj/Main.storyboard
+++ b/viralmedia/Base.lproj/Main.storyboard
@@ -67,10 +67,14 @@
         <!--Navigation Controller-->
         <scene sceneID="vzR-Ja-AfH">
             <objects>
-                <navigationController storyboardIdentifier="MainTable" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="w00-jC-bpb" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MainTable" definesPresentationContext="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" toolbarHidden="NO" id="w00-jC-bpb" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="VhJ-6j-Sue">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="2Zp-xQ-yni">
+                        <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="uRJ-hg-pFY" kind="relationship" relationship="rootViewController" id="gZg-kL-s5F"/>
                     </connections>
@@ -132,6 +136,54 @@
             </objects>
             <point key="canvasLocation" x="988" y="124"/>
         </scene>
+        <!--Table View Controller - Root View Controller-->
+        <scene sceneID="ian-7k-Unj">
+            <objects>
+                <tableViewController id="okD-w1-bqc" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="GxB-bI-QUQ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MonthCell" id="Bfm-cT-4fd">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Bfm-cT-4fd" id="uH9-gg-Tj0">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="okD-w1-bqc" id="fcw-tk-70B"/>
+                            <outlet property="delegate" destination="okD-w1-bqc" id="fQN-B6-nQT"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="fPU-IK-u06"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VZ6-wu-qkW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="988" y="827"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="5Nx-II-sSc">
+            <objects>
+                <navigationController definesPresentationContext="YES" toolbarHidden="NO" id="Mp8-VC-xcp" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="brt-JG-gRh">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="4kZ-eM-NGd">
+                        <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="okD-w1-bqc" kind="relationship" relationship="rootViewController" id="2iU-WO-Pto"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aZa-gU-gfh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="531" y="827"/>
+        </scene>
         <!--Web View Controller-->
         <scene sceneID="LEL-kO-FFp">
             <objects>
@@ -149,18 +201,12 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </webView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Y3Z-RG-VU7">
-                                <rect key="frame" x="0.0" y="519" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <items>
-                                    <barButtonItem title="Item" id="Jjw-Bb-vTq"/>
-                                </items>
-                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="SsH-U2-M0E"/>
                     <connections>
+                        <outlet property="_webView" destination="iUB-8t-iZj" id="SPB-fu-YRf"/>
                         <outlet property="webview" destination="iUB-8t-iZj" id="QMG-gt-gas"/>
                     </connections>
                 </viewController>
